--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <body>
 
     <header>
-        <img src="images/me.jpg" alt="Your Profile Image">
-        <h1>Brigham Aviles</h1>
+        <div class="header-content">
+            <img src="images/me.jpg" alt="Your Profile Image">
+            <h1>Brigham Aviles</h1>
+        </div>
     </header>
 
     <nav>
