--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <header>
         <div class="header-content">
-            <img src="images/me.jpg" alt="Your Profile Image">
+            <img src="images/me.jpg" alt="Image of Brigham Aviles">
             <h1>Brigham Aviles</h1>
         </div>
     </header>
