--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     Web Frontend Development by Brigham Aviles.">
     <title>Brigham Aviles - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="style/base.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
