--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Brigham Aviles - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="style/base.css">
     <link rel="icon" href="favicon.ico">
+
+    <meta property="og:title" content="Brigham Aviles">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://cdn.choosechicago.com/uploads/2022/09/Pink-skyline-with-out-logo.jpeg">
+    <meta property="og:url" content="https://brighamaviles.github.io/wdd230/">
 </head>
 
 <body>
