--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="card">
             <h3>Learning Activities</h3>
             <ul>
-                <li><a href="#">Activity 1</a></li>
+                <li><a href="lesson02/design-principles.html">lesson02</a></li>
                 <li><a href="#">Activity 2</a></li>
                 <li><a href="#">Activity 3</a></li>
             </ul>
