--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -21,14 +21,14 @@
                 <div class="card">
                     <h2>Visual Hierarchy</h2>
                     <p class="website-link">https://www.apple.com/</p>
-                    <img src="images/Screenshot 2024-05-04 112508.png" alt="Example 1">
+                    <img src="images/apple_img.png" alt="Example 1">
                     <p>The large hero image and minimal text immediately draw your eye to the main product being
                         featured. Smaller elements like navigation and supplementary text are clearly subordinate.</p>
                 </div>
                 <div class="card">
                     <h2>White Space and Clean Design</h2>
                     <p class="website-link">https://www.airbnb.com/</p>
-                    <img src="images/Screenshot 2024-05-04 112938.png" alt="Example 2">
+                    <img src="images/airbnb_img.png" alt="Example 2">
                     <p>Airbnb's website balances whitespace with just the right amount of content. The search
                         functionality is given breathing room, while listing previews are cleanly organized into visual
                         grids with lots of surrounding space.</p>
@@ -36,7 +36,7 @@
                 <div class="card">
                     <h2>PARC: Alignment</h2>
                     <p class="website-link">https://mailchimp.com/</p>
-                    <img src="images/Screenshot 2024-05-04 114638.png" alt="Example 3">
+                    <img src="images/mailchimp_img.png" alt="Example 3">
                     <p>The Mailchimp website has a clean, aligned design that makes excellent use of whitespace and
                         grid-based layouts. Right from the homepage, you can see the content is structured into distinct
                         sections with consistent alignment.</p>
