--- a/index.html
+++ b/index.html
@@ -27,14 +27,30 @@
         </div>
     </header>
 
+    <!-- <nav>
+
+        <ul class="navigation">
+
+            <li> <a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
+            <li> <a href="chamber/">Chamber</a></li>
+            <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
+            <li> <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/enos/1?lang=eng"
+                    target="_blank">Scripture</a></li>
+
+        </ul>
+    </nav> -->
+
+    <a id="menu" href="#"></a>
     <nav>
-        <a href="#">Home</a>
-        <a href="lesson03/chamber-site-plan.html">Site Plan</a>
-        <a href="chamber/">Chamber</a>
-        <a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a>
-        <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/enos/1?lang=eng"
-            target="_blank">Scripture</a>
+        <ul class="navigation">
+            <li><a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
+            <li><a href="chamber/">Chamber</a></li>
+            <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/enos/1?lang=eng"
+                    target="_blank">Scripture</a></li>
+        </ul>
     </nav>
+
 
     <main>
         <h2>WDD 230: Web Frontend Development</h2>
@@ -55,12 +71,22 @@
         </section>
     </main>
 
+    <div id="map-container">
+
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190256.1976049422!2d-87.89711005475777!3d41.83361467401434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2sChicago%2C%20IL!5e0!3m2!1sen!2sus!4v1715318163878!5m2!1sen!2sus"
+            width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+    </div>
+
     <footer>
         <p>&copy; <span id="currentYear"></span> Brigham Aviles, USA</p>
         <p id="lastModified"></p>
     </footer>
 
     <script src="scripts/getdates.js"></script>
+
 </body>
 
 </html>
