--- a/index.html
+++ b/index.html
@@ -27,19 +27,6 @@
         </div>
     </header>
 
-    <!-- <nav>
-
-        <ul class="navigation">
-
-            <li> <a href="lesson03/chamber-site-plan.html">Site Plan</a></li>
-            <li> <a href="chamber/">Chamber</a></li>
-            <li><a href="https://www.byui.edu/" target="_blank">BYU-Idaho</a></li>
-            <li> <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/enos/1?lang=eng"
-                    target="_blank">Scripture</a></li>
-
-        </ul>
-    </nav> -->
-
     <a id="menu" href="#"></a>
     <nav>
         <ul class="navigation">
@@ -59,7 +46,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li><a href="lesson02/design-principles.html">lesson02</a></li>
-                <li><a href="#">Activity 2</a></li>
+                <li><a href="lesson03/chamber-site-plan.html">Chamber Site plan</a></li>
                 <li><a href="#">Activity 3</a></li>
             </ul>
         </section>
