--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <h3>Learning Activities</h3>
             <ul>
                 <li><a href="lesson02/design-principles.html">lesson02</a></li>
-                <li><a href="lesson03/chamber-site-plan.html">Chamber Site plan</a></li>
+                <li><a href="chamber/index.html">Chamber Website</a></li>
                 <li><a href="#">Activity 3</a></li>
             </ul>
         </section>
