--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <ul>
                 <li><a href="lesson02/design-principles.html">lesson02</a></li>
                 <li><a href="chamber/index.html">Chamber Website</a></li>
-                <li><a href="#">Activity 3</a></li>
+                <li><a href="video_lesson/index.html">VIdeo Lesson</a></li>
             </ul>
         </section>
 
