--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book of Mormon - Top 10</title>
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/bom.css">
 </head>
 
 <body>
@@ -13,5 +15,11 @@
         <label for="favchap">Enter Book and Chapter: </label>
         <input type="text" id="favchap" placeholder="Alma 5">
         <button type="submit">Add Chapter</button>
+        <p id="message" style="color: red;"></p> <!-- Add this line -->
         <ul id="list"></ul>
     </main>
+
+    <script src="scripts/bom.js"></script>
+</body>
+
+</html>
