--- a/lesson05/bom.html
+++ b/lesson05/bom.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book of Mormon - Top 10</title>
+    <meta name="description"
+        content="Explore the top 10 chapters of the Book of Mormon and add your favorite chapters.">
+    <meta name="author" content="Brigham Aviles">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/bom.css">
 </head>
