--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Brigham Aviles">
     <title>Brigham Aviles - WDD 230 - Web Frontend Development</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/larger.css">
     <link rel="stylesheet" href="style/base.css">
     <link rel="icon" href="favicon.ico">
