--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chicago Chamber of Commerce</title>
+    <title>The Chicago of Chamber of Commerce</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
     <link rel="stylesheet" href="styles/base.css">
 
@@ -21,7 +21,7 @@
 
 <header>
     <div class="container">
-        <h1>Chicago Chamber of Commerce</h1>
+        <h1>Chicago Chamber of Commerce Site Plan</h1>
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
