--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -37,8 +37,11 @@
 <main>
 
     <body>
-        <section id="Reasons">
+
+
+        <section id="sitename">
             <div class="container">
+                <h2>Name: The Chicago chamber of Commerse</h2>
                 <h2>Reason for Selection:</h2>
                 <p>I am from chicago. I love the city in chicago and i hope because it so big i can fid a lot of
                     informatin about it.</p>
@@ -72,13 +75,17 @@
             </div>
         </section>
 
-        <section id="color-typography">
+        <section id="colorschema">
             <div class="container">
                 <h2>Color Scheme</h2>
                 <p><strong>Primary Color:</strong> #x#00154F (Orange) - Used for headings, buttons, and accents.</p>
                 <p><strong>Secondary Color:</strong> #FF9933 (Orange) - Used for highlights, call-to-action buttons,
                     and accents.</p>
+            </div>
+        </section>
 
+        <section id="typography">
+            <div class="container">
                 <h2>Typography</h2>
                 <p><strong>Primary Font:</strong> Open Sans - Used for headings and body text.</p>
                 <p><strong>Secondary Font:</strong> Oswald - Used for logos, headings, and emphasis.</p>
