--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -75,7 +75,7 @@
             </div>
         </section>
 
-        <section id="colorschema">
+        <section id="color">
             <div class="container">
                 <h2>Color Scheme</h2>
                 <p><strong>Primary Color:</strong> #x#00154F (Orange) - Used for headings, buttons, and accents.</p>
