--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -92,6 +92,13 @@
             </div>
         </section>
 
+        <section id="wireframe">
+            <div class="container">
+                <h2>mywireframe</h2>
+                <img src="images/wireframeimage.jpeg" alt="Image of wireframe of chamber website">
+            </div>
+        </section>
+
     </body>
 </main>
 
