--- a/lesson03/chamber-site-plan.html
+++ b/lesson03/chamber-site-plan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Chicago of Chamber of Commerce</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide|Sofia|Trirong">
-    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="style/base.css">
 
     <meta name="description"
         content="The chicago chamber of comerce is dedicated to supporting local businesses and fostering economic growth in Chicago area.">
