--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <li><a href="lesson02/design-principles.html">lesson02</a></li>
                 <li><a href="lesson03/chamber-site-plan.html">Chamber Site Plan</a></li>
                 <li><a href="video_lesson/index.html">VIdeo Lesson</a></li>
+                <li><a href="chamber/index.html">Chambewr Of Commerce Wewbsite</a></li>
             </ul>
         </section>
 
