--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,6 +22,7 @@
         <div class="header-container">
             <div class="logo">
                 <img src="logo.png" alt="Timbuktu Chamber of Commerce">
+                <h1>The Chicago Chamber of Commerce</h1>
             </div>
             <div class="social-icons">
                 <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
