--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,7 +25,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="logo.png" alt="Timbuktu Chamber of Commerce">
+                <img src="logo.png" alt="Chicago Chamber of Commerce">
                 <h1>The Chicago Chamber of Commerce</h1>
             </div>
             <div class="social-icons">
@@ -77,9 +77,9 @@
     </main>
     <footer id="join">
         <div class="footer-content">
-            <p>Timbuktu Chamber of Commerce<br>10 Rue De La Paix<br>Timbuktu, Mali 999</p>
-            <p>info@timbuktucc.org<br>+223 2070-2300<br><a href="#">Location Map</a></p>
-            <p>©2022 Timbuktu Chamber | Rubia M. Francesco | WDD 230 Project | Last Modification: 10/17/2022 22:12:29
+            <p>CHiacago Chamber of Commerce<br>10 Rue De La Paix<br>Chicago, Mali 999</p>
+            <p>info@tChicago.org<br>+223 2070-2300<br><a href="#">Location Map</a></p>
+            <p>©2022 Chicago Chamber | Rubia M. Francesco | WDD 230 Project | Last Modification: 10/17/2022 22:12:29
             </p>
         </div>
     </footer>
@@ -89,7 +89,7 @@
         <div class="modal-content">
             <span class="close-button">&times;</span>
             <h2>Join the Chamber</h2>
-            <p>Thank you for your interest in joining the Timbuktu Chamber of Commerce. Please fill out the membership
+            <p>Thank you for your interest in joining the Chicago Chamber of Commerce. Please fill out the membership
                 form on our website.</p>
             <button>Go to Membership Form</button>
         </div>
