--- a/chamber/index.html
+++ b/chamber/index.html
@@ -18,7 +18,6 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="stylesheet" href="styles/medium.css">
-
 </head>
 
 <body>
@@ -50,7 +49,7 @@
         <section class="info">
             <div class="events">
                 <h2>Events</h2>
-                <p><strong>Ribbon Cutting</strong> - The Diam💎nd Shack<br>Join us for the grand opening of The Diamond
+                <p><strong>Ribbon Cutting</strong> - The Diamond Shack<br>Join us for the grand opening of The Diamond
                     Shack, Thursday at 1:00 p.m.<br><a href="#">more info ...</a></p>
             </div>
             <div class="weather" id="weather-section">
@@ -77,10 +76,9 @@
     </main>
     <footer id="join">
         <div class="footer-content">
-            <p>CHiacago Chamber of Commerce<br>10 Rue De La Paix<br>Chicago, Mali 999</p>
+            <p>Chicago Chamber of Commerce<br>10 Rue De La Paix<br>Chicago, Mali 999</p>
             <p>info@tChicago.org<br>+223 2070-2300<br><a href="#">Location Map</a></p>
-            <p>©2022 Chicago Chamber | Rubia M. Francesco | WDD 230 Project | Last Modification: 10/17/2022 22:12:29
-            </p>
+            <p>©2022 Chicago Chamber | Rubia M. Francesco | WDD 230 Project | Last Modification: 10/17/2022 22:12:29</p>
         </div>
     </footer>
 
