--- a/chamber/index.html
+++ b/chamber/index.html
@@ -41,6 +41,8 @@
             </ul>
         </nav>
     </header>
+
+
     <main id="home">
         <section class="hero">
             <img src="hero-image.jpg" alt="Scenic view">
@@ -57,6 +59,11 @@
                 <p><strong>33°C</strong><br>Partly Cloudy<br><span class="weather-details">Humidity: 35%<br>Wind Chill:
                         N/A</span></p>
             </div>
+            <div class="page-visit-counter">
+                <h2>Page Visit Counter</h2>
+                <p>This page has been visited <span id="visit-count">0</span> times.</p>
+            </div>
+
         </section>
         <section class="sponsors" id="directory">
             <div class="sponsor-card">
