--- a/chamber/index.html
+++ b/chamber/index.html
@@ -42,6 +42,10 @@
         </nav>
     </header>
 
+    <div class="banner">
+        <img src="images/Chicago.jpg" alt="Banner Image of chicago">
+    </div>
+
 
     <main id="home">
         <section class="hero">
@@ -80,6 +84,15 @@
                 <p>Over 1000 Plans!<br>builda@treefort.com<br>+888-8888-8888<br><a href="#">Website</a></p>
             </div>
         </section>
+
+        <div class="map-container">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190256.1976049422!2d-87.89711005475777!3d41.83361467401434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2sChicago%2C%20IL!5e0!3m2!1sen!2sus!4v1715318163878!5m2!1sen!2sus"
+                width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+
     </main>
     <footer id="join">
         <div class="footer-content">
