--- a/chamber/index.html
+++ b/chamber/index.html
@@ -88,8 +88,7 @@
         <div class="map-container">
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190256.1976049422!2d-87.89711005475777!3d41.83361467401434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2sChicago%2C%20IL!5e0!3m2!1sen!2sus!4v1715318163878!5m2!1sen!2sus"
-                width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade">
+                class="google-map" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
             </iframe>
         </div>
 
@@ -100,6 +99,7 @@
             <p>info@tChicago.org<br>+223 2070-2300<br><a href="#">Location Map</a></p>
             <p>©2022 Chicago Chamber | Rubia M. Francesco | WDD 230 Project | Last Modification: 10/17/2022 22:12:29</p>
         </div>
+
     </footer>
 
     <!-- Modal -->
