--- a/chamber/index.html
+++ b/chamber/index.html
@@ -23,29 +23,24 @@
 <body>
     <header>
         <div class="header-container">
-            <div class="logo">
-                <img src="logo.png" alt="Chicago Chamber of Commerce">
-                <h1>The Chicago Chamber of Commerce</h1>
-            </div>
-            <div class="social-icons">
-                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-                <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
-            </div>
+            <h1>The Chicago Chamber of Commerce</h1>
         </div>
         <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#discover">Discover</a></li>
-                <li><a href="#directory">Directory</a></li>
-                <li><a href="#join">Join</a></li>
-            </ul>
+            <div class="nav-container">
+                <button class="hamburger">&#9776;</button>
+                <ul class="nav-links">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#discover">Discover</a></li>
+                    <li><a href="#directory">Directory</a></li>
+                    <li><a href="#join">Join</a></li>
+                </ul>
+            </div>
         </nav>
     </header>
 
     <div class="banner">
         <img src="images/Chicago.jpg" alt="Banner Image of chicago">
     </div>
-
 
     <main id="home">
         <section class="hero">
@@ -101,8 +96,6 @@
         </div>
 
     </footer>
-
-    <!-- Modal -->
     <div id="modal" class="modal">
         <div class="modal-content">
             <span class="close-button">&times;</span>
@@ -110,6 +103,11 @@
             <p>Thank you for your interest in joining the Chicago Chamber of Commerce. Please fill out the membership
                 form on our website.</p>
             <button>Go to Membership Form</button>
+
+            <div class="social-icons">
+                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+            </div>
         </div>
     </div>
 
