--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,6 +34,10 @@
                     <li><a href="#directory">Directory</a></li>
                     <li><a href="#join">Join</a></li>
                 </ul>
+                <div class="toggle-switch">
+                    <input type="checkbox" id="dark-mode-toggle">
+                    <label for="dark-mode-toggle"></label>
+                </div>
             </div>
         </nav>
     </header>
