--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <header>
         <div class="header-content">
-            <img src="images/me.jpg" alt="Image of Brigham Aviles Image">
+            <img src="images/me.webp" alt="Image of Brigham Aviles Image">
             <h1>Brigham Aviles</h1>
         </div>
     </header>
