--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
 
 
     <main>
+        <div class="hero">
+            <picture>
+                <source media="(min-width: 960px)" srcset="/images/Nauvoo_temple.webp">
+                <source media="(max-width: 959px)" srcset="/images/temple2.webp">
+                <img src="images/Nauvoo_temple.webp" alt="Salt Lake Temple">
+            </picture>
+            <div class="herolabel">
+                <p>Navoo Temple</p>
+            </div>
+        </div>
+
         <h2>WDD 230: Web Frontend Development</h2>
 
         <section class="card">
@@ -51,7 +62,7 @@
                 <li><a href="lesson02/design-principles.html">lesson02</a></li>
                 <li><a href="lesson03/chamber-site-plan.html">Chamber Site Plan</a></li>
                 <li><a href="video_lesson/index.html">VIdeo Lesson</a></li>
-                <li><a href="chamber/index.html">Chambewr Of Commerce Wewbsite</a></li>
+                <li><a href="chamber/index.html">Chamber Of Commerce Wewbsite</a></li>
             </ul>
         </section>
 
