--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Welcome to the course assignment portal for WDD 230 - 
-    Web Frontend Development by Brigham Aviles.">
+    <meta name="description"
+        content="Welcome to the course assignment portal for WDD 230 - Web Frontend Development by Brigham Aviles.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Brigham Aviles">
     <title>Brigham Aviles - WDD 230 - Web Frontend Development</title>
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/base.css">
     <link rel="stylesheet" href="style/larger.css">
-
-
     <link rel="icon" href="favicon.ico">
-
     <meta property="og:title" content="Brigham Aviles">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://cdn.choosechicago.com/uploads/2022/09/Pink-skyline-with-out-logo.jpeg">
@@ -25,7 +22,7 @@
 
     <header>
         <div class="header-content">
-            <img src="images/me.webp" alt="Image of Brigham Aviles Image">
+            <img src="images/me.webp" alt="Image of Brigham Aviles">
             <h1>Brigham Aviles</h1>
         </div>
     </header>
@@ -41,12 +38,11 @@
         </ul>
     </nav>
 
-
     <main>
         <div class="hero">
             <picture>
-                <source media="(min-width: 960px)" srcset="/images/Nauvoo_temple.webp">
-                <source media="(max-width: 959px)" srcset="/images/temple2.webp">
+                <source media="(min-width: 960px)" srcset="images/Nauvoo_temple.webp">
+                <source media="(max-width: 959px)" srcset="images/temple2.webp">
                 <img src="images/Nauvoo_temple.webp" alt="Salt Lake Temple">
             </picture>
             <div class="herolabel">
@@ -74,13 +70,11 @@
     </main>
 
     <div id="map-container">
-
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190256.1976049422!2d-87.89711005475777!3d41.83361467401434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2sChicago%2C%20IL!5e0!3m2!1sen!2sus!4v1715318163878!5m2!1sen!2sus"
             width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
-
     </div>
 
     <footer>
