--- a/chamber/index.html
+++ b/chamber/index.html
@@ -59,17 +59,10 @@
             </div>
             <div class="weather" id="weather-section">
                 <h2>Weather</h2>
-                <p><strong><span id="temp"></span>°C</strong><br>Partly Cloudy<br>
-                <p> class="weather-details">Humidity: 35%<br>Wind Speed: <span id="wind-speed">10</span>
+                <p><strong><span id="temp">71</span>°C</strong><br>Partly Cloudy<br>
+                <p> class="weather-details">Humidity: 35%<br>Wind Speed: <span id="wind-speed">4</span>
                     mph<br>Wind Chill: <span id="wind-chill">N/A</p>
                 </p>
-                <section class="card">
-                    <h3>Information</h3>
-                    <p>Temperature: <input type="number" id="temp" value="0"> °F</p>
-                    <p>Wind Speed: <input type="number" id="windspeed" value="0"> mph</p>
-                    <button onclick="calculateAndDisplayWindChill()">Calculate Wind Chill</button>
-                    <p>Wind Chill: <span id="windchill">N/A</span></p>
-                </section>
             </div>
 
 
