--- a/chamber/index.html
+++ b/chamber/index.html
@@ -43,7 +43,7 @@
     </header>
 
     <div class="banner">
-        <img src="images/Chicago.jpg" alt="Banner Image of chicago">
+        <img src="images/Chicago.webp" alt="hero-Banner Image of chicago">
     </div>
 
     <main id="home">
