--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -42,65 +42,39 @@
         </nav>
     </header>
 
-    <div class="banner">
-        <img src="images/Chicago.webp" alt="hero-Banner Image of chicago">
-    </div>
-
-    <main id="home">
-        <section class="hero">
-            <img src="hero-image.jpg" alt="Scenic view">
-            <button class="join-button">Join the Chamber</button>
-        </section>
-        <section class="info">
-            <div class="events">
-                <h2>Events</h2>
-                <p><strong>Ribbon Cutting</strong> - The Diamond Shack<br>Join us for the grand opening of The Diamond
-                    Shack, Thursday at 1:00 p.m.<br><a href="#">more info ...</a></p>
-            </div>
-            <div class="weather" id="weather-section">
-                <h2>Weather</h2>
-                <p><strong><span id="temp"></span>°C</strong><br>Partly Cloudy<br>
-                <p> class="weather-details">Humidity: 35%<br>Wind Speed: <span id="wind-speed">10</span>
-                    mph<br>Wind Chill: <span id="wind-chill">N/A</p>
-                </p>
-                <section class="card">
-                    <h3>Information</h3>
-                    <p>Temperature: <input type="number" id="temp" value="0"> °F</p>
-                    <p>Wind Speed: <input type="number" id="windspeed" value="0"> mph</p>
-                    <button onclick="calculateAndDisplayWindChill()">Calculate Wind Chill</button>
-                    <p>Wind Chill: <span id="windchill">N/A</span></p>
-                </section>
-            </div>
+    <main>
 
 
-            <div class="page-visit-counter">
-                <h2>Page Visit Counter</h2>
-                <p>This page has been visited <span id="visit-count">0</span> times.</p>
-            </div>
 
-        </section>
-        <section class="sponsors" id="directory">
-            <div class="sponsor-card">
-                <h3>Thankful Transport</h3>
-                <p>"We get it there for you!"<br>hello@thankfultransport.com<br>+999-9999-9999<br><a
-                        href="#">Website</a></p>
-            </div>
-            <div class="sponsor-card">
-                <h3>Code Primera</h3>
-                <p>After school coding!<br>contact@codeprimera.com<br>+999-9999-9999<br><a href="#">Website</a></p>
-            </div>
-            <div class="sponsor-card">
-                <h3>Build A Treefort</h3>
-                <p>Over 1000 Plans!<br>builda@treefort.com<br>+888-8888-8888<br><a href="#">Website</a></p>
-            </div>
-        </section>
 
-        <div class="map-container">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d190256.1976049422!2d-87.89711005475777!3d41.83361467401434!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880e2c3cd0f4cbed%3A0xafe0a6ad09c0c000!2sChicago%2C%20IL!5e0!3m2!1sen!2sus!4v1715318163878!5m2!1sen!2sus"
-                class="google-map" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
-            </iframe>
-        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     </main>
     <footer id="join">
