--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -42,41 +42,121 @@
         </nav>
     </header>
 
-    <main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <main class="grid-container">
+        <aside class="sidebar">
+            <section id="visit-message"></section>
+            <section class="demographics">
+                <h2>Demographics</h2>
+                <p><strong>Population:</strong> 2.7 million</p>
+                <p><strong>Median Age:</strong> 34.7 years</p>
+                <p><strong>Households:</strong> 1.1 million</p>
+            </section>
+            <section class="events">
+                <h2>Upcoming Events</h2>
+                <div class="event">
+                    <strong>Business Expo</strong><br>
+                    <small>June 15, 2024</small>
+                </div>
+                <div class="event">
+                    <strong>Networking Night</strong><br>
+                    <small>June 22, 2024</small>
+                </div>
+            </section>
+            <section class="attractions">
+                <h2>Attractions</h2>
+                <ul>
+                    <li>Millennium Park</li>
+                    <li>Navy Pier</li>
+                    <li>Art Institute of Chicago</li>
+                </ul>
+            </section>
+            <section class="calendar">
+                <h2>June 2024</h2>
+                <table class="calendar-table">
+                    <thead>
+                        <tr>
+                            <th>Sun</th>
+                            <th>Mon</th>
+                            <th>Tue</th>
+                            <th>Wed</th>
+                            <th>Thu</th>
+                            <th>Fri</th>
+                            <th>Sat</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>1</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>3</td>
+                            <td>4</td>
+                            <td>5</td>
+                            <td>6</td>
+                            <td>7</td>
+                            <td>8</td>
+                        </tr>
+                        <tr>
+                            <td>9</td>
+                            <td>10</td>
+                            <td>11</td>
+                            <td>12</td>
+                            <td>13</td>
+                            <td>14</td>
+                            <td>15</td>
+                        </tr>
+                        <tr>
+                            <td>16</td>
+                            <td>17</td>
+                            <td>18</td>
+                            <td>19</td>
+                            <td>20</td>
+                            <td>21</td>
+                            <td>22</td>
+                        </tr>
+                        <tr>
+                            <td>23</td>
+                            <td>24</td>
+                            <td>25</td>
+                            <td>26</td>
+                            <td>27</td>
+                            <td>28</td>
+                            <td>29</td>
+                        </tr>
+                        <tr>
+                            <td>30</td>
+                            <td>31</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                </table>
+                <ul class="events-list">
+                    <li>15: Business Expo</li>
+                    <li>22: Networking Night</li>
+                    <li>30: Monthly Meeting</li>
+                </ul>
+        </aside>
+        <section class="gallery">
+            <img src="images/chicago river.webp" alt="Chicago River Image" class="lazy" loading="lazy">
+            <img src="images/chicago beach.webp" alt="Chicago Beach Image" class="lazy" loading="lazy">
+            <img src="images/chicago snow.webp" alt="Chicago Snow Image" class="lazy" loading="lazy">
+            <img src="images/deep dish.webp" alt="Chicago Deep Dish Pizza Image" class="lazy" loading="lazy">
+            <img src="images/chicago baseball.webp" alt="Chicago Wrigley Field Image" class="lazy" loading="lazy">
+            <img src="images/chicago hotdog.webp" alt="Chicago HotDog Image" class="lazy" loading="lazy">
+        </section>
     </main>
+
     <footer id="join">
         <div class="footer-content">
             <p>Chicago Chamber of Commerce<br>10 Rue De La Paix<br>Chicago, Mali 999</p>
