--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <li><a href="lesson03/chamber-site-plan.html">Chamber Site Plan</a></li>
                 <li><a href="video_lesson/index.html">VIdeo Lesson</a></li>
                 <li><a href="chamber/index.html">Chamber Of Commerce Wewbsite</a></li>
+                <li><a href="chamber/discover.html">Discover Chicago</a></li>
             </ul>
         </section>
 
