--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -146,6 +146,7 @@
                     <li>22: Networking Night</li>
                     <li>30: Monthly Meeting</li>
                 </ul>
+            </section>
         </aside>
         <section class="gallery">
             <img src="images/chicago river.webp" alt="Chicago River Image" class="lazy" loading="lazy">
