--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 <li><a href="video_lesson/index.html">VIdeo Lesson</a></li>
                 <li><a href="chamber/index.html">Chamber Of Commerce Wewbsite</a></li>
                 <li><a href="chamber/discover.html">Discover Chicago</a></li>
+                <li><a href="form.html">Form Build</a></li>
             </ul>
         </section>
 
