--- a/form.html
+++ b/form.html
@@ -7,10 +7,8 @@
         content="Welcome to the course assignment portal for WDD 230 - Web Frontend Development by Brigham Aviles.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Brigham Aviles">
-    <title>Brigham Aviles - WDD 230 - Web Frontend Development</title>
-    <link rel="stylesheet" href="style/normalize.css">
+    <title>Brigham Aviles - WDD 230 - Form Build</title>
     <link rel="stylesheet" href="style/form.css">
-    <link rel="stylesheet" href="style/larger.css">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Brigham Aviles">
     <meta property="og:type" content="website">
