--- a/form.html
+++ b/form.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description"
-        content="Welcome to the course assignment portal for WDD 230 - Web Frontend Development by Brigham Aviles.">
+        content="Welcome to the form build this where you can log in to the page and submite your credential">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Brigham Aviles">
     <title>Brigham Aviles - WDD 230 - Form Build</title>
-    <link rel="stylesheet" href="style/form.css">
+    <link rel="stylesheet" href="styles/form.css">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Brigham Aviles">
     <meta property="og:type" content="website">
