--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Brigham Aviles">
     <title>Brigham Aviles - WDD 230 - Web Frontend Development</title>
-    <link rel="stylesheet" href="style/normalize.css">
-    <link rel="stylesheet" href="style/base.css">
-    <link rel="stylesheet" href="style/larger.css">
+    <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Brigham Aviles">
     <meta property="og:type" content="website">
