--- a/chamber/index.html
+++ b/chamber/index.html
@@ -117,7 +117,8 @@
             <h2>Join the Chamber</h2>
             <p>Thank you for your interest in joining the Chicago Chamber of Commerce. Please fill out the membership
                 form on our website.</p>
-            <button>Go to Membership Form</button>
+            <button onclick="window.location.href='join.html'">Go to Membership Form</button>
+
 
             <div class="social-icons">
                 <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
