--- a/chamber/join.html
+++ b/chamber/join.html
@@ -32,7 +32,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#discover">Discover</a></li>
                     <li><a href="#directory">Directory</a></li>
-                    <li><a href="#join">Join</a></li>
+                    <li><a href="join.html">Join</a></li>
                 </ul>
                 <div class="toggle-switch">
                     <input type="checkbox" id="dark-mode-toggle">
