--- a/chamber/join.html
+++ b/chamber/join.html
@@ -65,6 +65,7 @@
 
                 <label for="membership">Membership Level:</label>
                 <select id="membership" name="membership" required>
+                    <option value="" disabled selected>Select Membership Level</option>
                     <option value="NP">NP Membership</option>
                     <option value="Bronze">Bronze Membership</option>
                     <option value="Silver">Silver Membership</option>
@@ -79,7 +80,7 @@
                 <button type="submit">Submit Form</button>
             </form>
         </div>
-        </div>
+
         <div class="benefits-container">
             <h2>Membership Benefits</h2>
             <div class="membership-level">
@@ -102,25 +103,28 @@
                 <p>High fee</p>
                 <p>Premium benefits</p>
             </div>
+        </div>
     </main>
 
 
 
-    </footer>
-    <div id="modal" class="modal">
-        <div class="modal-content">
-            <span class="close-button">&times;</span>
-            <h2>Join the Chamber</h2>
-            <p>Thank you for your interest in joining the Chicago Chamber of Commerce. Please fill out the membership
-                form on our website.</p>
-            <button>Go to Membership Form</button>
+    <footer>
+        <div id="modal" class="modal">
+            <div class="modal-content">
+                <span class="close-button">&times;</span>
+                <h2>Join the Chamber</h2>
+                <p>Thank you for your interest in joining the Chicago Chamber of Commerce. Please fill out the
+                    membership
+                    form on our website.</p>
+                <button>Go to Membership Form</button>
 
-            <div class="social-icons">
-                <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
-                <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+                <div class="social-icons">
+                    <a href="#"><img src="facebook-icon.png" alt="Facebook"></a>
+                    <a href="#"><img src="linkedin-icon.png" alt="LinkedIn"></a>
+                </div>
             </div>
         </div>
-    </div>
+    </footer>
 
     <script src="scripts/base.js"></script>
     <script src="scripts/windchill.js"></script>
