--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,9 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Chicago Chamber of Commerce</title>
-    <meta name="description"
-        content="The Chicago Chamber of Commerce is dedicated to supporting local businesses and fostering economic growth in the Chicago area.">
+    <title>Join membership form</title>
+    <meta name="description" content="The join website where customers put their info to join the chamber of commerce">
     <meta name="author" content="Brigham Aviles">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Chicago Chamber of Commerce">
