--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
             <p>Weather: Sunny</p>
             <p>Number of Visits: 100</p>
         </section>
+
+        <div id="linksContainer"></div>
+
     </main>
 
     <div id="map-container">
@@ -85,6 +88,7 @@
     </footer>
 
     <script src="scripts/getdates.js"></script>
+    <script src="scripts/links.js"></script>
 
 </body>
 
