more changes to pgrohets website

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
                 <li><a href="chamber/index.html">Chamber Of Commerce Wewbsite</a></li>
                 <li><a href="chamber/discover.html">Discover Chicago</a></li>
                 <li><a href="form.html">Form Build</a></li>
+                <li><a href="lesson09/prophets.html">Lesson09</a></li>
+
             </ul>
         </section>
 
