--- a/index.html
+++ b/index.html
@@ -66,9 +66,20 @@
             </ul>
         </section>
 
+        <div class="weather-card">
+            <div class="temperature">
+                <span id="current-temp">Loading...</span>
+            </div>
+            <div class="weather-icon">
+                <img id="weather-icon" src="" alt="Weather Icon">
+            </div>
+            <div class="weather-description">
+                <figcaption></figcaption>
+            </div>
+        </div>
+
         <section class="card">
             <h3>Information</h3>
-            <p>Weather: Sunny</p>
             <p>Number of Visits: 100</p>
         </section>
 
@@ -91,6 +102,7 @@
 
     <script src="scripts/getdates.js"></script>
     <script src="scripts/links.js"></script>
+    <script src="scripts/weather.js"></script>
 
 </body>
 
