--- a/chamber/join.html
+++ b/chamber/join.html
@@ -28,10 +28,9 @@
             <div class="nav-container">
                 <button class="hamburger">&#9776;</button>
                 <ul class="nav-links">
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#discover">Discover</a></li>
-                    <li><a href="#directory">Directory</a></li>
-                    <li><a href="join.html">Join</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="/chamber/discover.html">Discover</a></li>
+                    <li><a href="/chamber/directory.html">Directory</a></li>
                 </ul>
                 <div class="toggle-switch">
                     <input type="checkbox" id="dark-mode-toggle">
