--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,8 +31,9 @@
 
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="/chamber/discover.html">Discover</a></li>
-                    <li><a href="/chamber/directory.html">Directory</a></li>
+                    <li><a href="discover.html">Discover</a></li>
+                    <li><a href="directory.html">Directory</a></li>
+                    <li><a href="join.html">Join</a></li>
                 </ul>
 
                 <div class="toggle-switch">
