--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,6 +32,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="discover.html">Discover</a></li>
                     <li><a href="directory.html">Directory</a></li>
+                    <li><a href="join.html">Join</a></li>
                 </ul>
                 <div class="toggle-switch">
                     <input type="checkbox" id="dark-mode-toggle">
