--- a/chamber/join.html
+++ b/chamber/join.html
@@ -29,8 +29,9 @@
                 <button class="hamburger">&#9776;</button>
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="/chamber/discover.html">Discover</a></li>
-                    <li><a href="/chamber/directory.html">Directory</a></li>
+                    <li><a href="discover.html">Discover</a></li>
+                    <li><a href="directory.html">Directory</a></li>
+                    <li><a href="join.html">Join</a></li>
                 </ul>
                 <div class="toggle-switch">
                     <input type="checkbox" id="dark-mode-toggle">
