--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Chicago Chamber of Commerce</title>
+    <title>The Chicago Chamber of Commerce Directory</title>
     <meta name="description"
         content="The Chicago Chamber of Commerce is dedicated to supporting local businesses and fostering economic growth in the Chicago area.">
     <meta name="author" content="Brigham Aviles">
