--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Chicago Chamber of Commerce Directory</title>
     <meta name="description"
-        content="The Chicago Chamber of Commerce is dedicated to supporting local businesses and fostering economic growth in the Chicago area.">
+        content="The Chicago Chamber of Commerce directory page is to find other members in the chamber.">
     <meta name="author" content="Brigham Aviles">
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Chicago Chamber of Commerce Discover">
