--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Your Name">
     <title>Thank You!</title>
+     <meta name="description" content="This page tell you thank you after signing up">
     <link rel="stylesheet" href="styles/thankyou.css">
 </head>
 
