--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -8,6 +8,7 @@
     <title>Thank You!</title>
      <meta name="description" content="This page tell you thank you after signing up">
     <link rel="stylesheet" href="styles/thankyou.css">
+     <meta name="author" content="Brigham Aviles">
 </head>
 
 <body>
