--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Your Name">
     <title>Thank You!</title>
-     <meta name="description" content="This page tell you thank you after signing up">
+    <meta name="description" content="This page tell you thank you after signing up">
     <link rel="stylesheet" href="styles/thankyou.css">
-     <meta name="author" content="Brigham Aviles">
+    <meta name="author" content="Brigham Aviles">
+    <link rel="icon" href="favicon.ico">
 </head>
 
 <body>
