--- a/final/index.html
+++ b/final/index.html
@@ -11,8 +11,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Oswald&family=Poppins&family=Raleway:ital,wght@1,500&family=Roboto:wght@900&family=Source+Sans+3:wght@600&display=swap"
         rel="stylesheet" />
-    <link rel="stylesheet" href="/final/styles/normalize.css" />
-    <link rel="stylesheet" href="/final/styles/base.css" />
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/base.css" />
     <link rel="icon" href="styles/favicon.ico">
     <meta property="og:title" content="Brigham Aviles">
     <meta property="og:type" content="website">
